# RTXGI

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Changelog.md  LICENSE.md  README.md  Readme.md  b.bat  z.bat
Docs/: NrcGuide.md  QuickStart.md
Samples/Pathtracer/: CMakeLists.txt  Denoiser.hlsl  GlobalCb.h  NrcIntegration.cpp  NrcUtils.cpp  NrcUtils.h  NrdConfig.h  NrdIntegration.cpp  NrdIntegration.h  Pathtracer.cpp  Pathtracer.cpp.bak  Pathtracer.h  Pathtracer.hlsl  PathtracerUi.cpp  PathtracerUi.h  PathtracerUtils.h  RenderTargets.cpp  SharcResolve.hlsl
Samples/Pathtracer/Nrd/: NRD.hlsli
docs/: NrcGuide.md  QuickStart.md  SharcGuide.md
samples/pathtracer/: CMakeLists.txt  LightingCb.h  NrcIntegration.cpp  NrcIntegration.h  NrcUtils.cpp  NrcUtils.h  NrdConfig.cpp  NrdConfig.h  NrdIntegration.cpp  NrdIntegration.h  Pathtracer.cpp  Pathtracer.h  PathtracerUi.cpp  PathtracerUi.h  PathtracerUtils.h  RenderTargets.cpp  RenderTargets.h  brdf.h  denoiser.hlsl  global_cb.h  lighting_cb.h  pathtracer.hlsl  shaders.cfg  sharcResolve.hlsl  tonemapping.hlsl
samples/pathtracer/NRD/: DenoiserNRD.hlsli  NRD.hlsli
